-changed: made the videos visible to avoid the weird bug, that a player continues to play even though the playing prop value is set to false

--- a/src/components/pomodore/Pomodore.css
+++ b/src/components/pomodore/Pomodore.css
@@ -1,6 +1,6 @@
 .PomodoreContainer {
   width: 100%;
-  min-height: 50px;
+  height: 150px;
   background-color: #0077c2;
   color: #fafafa;
   display: flex;
